--- a/2083.plist
+++ b/2083.plist
@@ -10,17 +10,17 @@
                         <key>kind</key>
                         <string>software-package</string>
                         <key>url</key>
-                        <string>https://github.com/wikijone/ios-pekall-mdm/blob/master/2083.ipa</string></dict>
+                        <string>https://raw.githubusercontent.com/wikijone/ios-pekall-mdm/master/2083.ipa</string>
                     <dict>
                         <key>kind</key>
                         <string>display-image</string>
                         <key>url</key>
-                        <string>https://github.com/wikijone/ios-pekall-mdm/blob/master/icon.57x57.png</string></dict>
+                        <string>https://raw.githubusercontent.com/wikijone/ios-pekall-mdm/master/icon.57x57.png</string></dict>
                     <dict>
                         <key>kind</key>
                         <string>full-size-image</string>
                         <key>url</key>
-                        <string>https://github.com/wikijone/ios-pekall-mdm/blob/master/icon.512.512.png</string></dict>
+                        <string>https://raw.githubusercontent.com/wikijone/ios-pekall-mdm/master/icon.512.512.png</string></dict>
                 </array>
                 <key>metadata</key>
                 <dict>
