--- a/2083.plist
+++ b/2083.plist
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
     <dict>
         <key>items</key>
@@ -11,16 +12,19 @@
                         <string>software-package</string>
                         <key>url</key>
                         <string>https://raw.githubusercontent.com/wikijone/ios-pekall-mdm/master/2083.ipa</string>
+                    </dict>
                     <dict>
                         <key>kind</key>
                         <string>display-image</string>
                         <key>url</key>
-                        <string>https://raw.githubusercontent.com/wikijone/ios-pekall-mdm/master/icon.57x57.png</string></dict>
+                        <string>https://raw.githubusercontent.com/wikijone/ios-pekall-mdm/master/icon.57x57.png</string>
+                    </dict>
                     <dict>
                         <key>kind</key>
                         <string>full-size-image</string>
                         <key>url</key>
-                        <string>https://raw.githubusercontent.com/wikijone/ios-pekall-mdm/master/icon.512.512.png</string></dict>
+                        <string>https://raw.githubusercontent.com/wikijone/ios-pekall-mdm/master/icon.512.512.png</string>
+                    </dict>
                 </array>
                 <key>metadata</key>
                 <dict>
